..F....... [ZBXNEXT-1113] redesign Configuration->Host->Discovery rules (Eduard)
..F....... [ZBXNEXT-1107] redesign Configuration->Audit (Eduard)
....I..PS. [ZBX-2604] added processing of not supported items monitored by a proxy (Sasha)
..F....... [ZBXNEXT-903] redesign Configuration->Items (Eduard)
..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)

Bug fixes:
A.F....... [ZBX-4563] fixed host macro IDs being regenerated when updating macros (pavels)
A.F....... [ZBX-4563] fixed several macro validation issues (pavels)
..F....... [ZBX-4563] fixed macro sorting (pavels)
..F....... [ZBX-3735] fixed login form to send passwords via POST not GET; thanks to Joseph Bueno (Alexei)
A......... [ZBX-954] increased API version to 1.4, Zabbix 1.8.x is using 1.3 (Alexei)
A.F....... [ZBX-4604] fixed "screen" type screen item validation (pavels)
........S. [ZBX-4560] fixed low level discovery error messages to start with uppercase 'Cannot ...' (Alexei)
..F....... [ZBX-4677] fixed minor typo in class.cscript.php; thanks to Łukasz Jernaś (Alexei)
..F.....S. [ZBX-4261] fixed disovery rules in the queue calculation (Sasha)
...G...... [ZBX-4624] fixed processing of system.cpu.switches metric (Sasha)
..F....... [ZBX-4623] fixed host group visibility for non superadmins. (Toms)
........S. [ZBX-4662] fixed server crash while linking a template with DebugLevel=4 (Sasha)
..F....... [ZBX-1335] improved Item filter. (Eduard)
..F....... [ZBX-4630] fixed "Trigger overview" screen. (Eduard)
.......PS. [ZBX-4628] fixed an "invalid number of fields" error when syncing configuration on proxy (Sasha)
A.F....... [ZBX-4593] fixed "Trigger info" type screen item resource validation (pavels)
A.F....... [ZBX-4599] fixed errors in building select queries in Event.get() (pavels)
..F....... [ZBX-1787] fixed gradient element rendering if the value exceeds the max Y scale value (pavels)
A.F....... [ZBX-4494] fixed some types of screen items not being returned by Screen.get() (pavels)