@@ -62,11 +62,14 @@ ALTER TABLE items ADD port nvarchar2(64) DEFAULT '';
 ALTER TABLE items ADD description nvarchar2(2048) DEFAULT '';
 ALTER TABLE items ADD inventory_link number(10) DEFAULT '0' NOT NULL;
 ALTER TABLE items ADD lifetime nvarchar2(64) DEFAULT '30';
-
-UPDATE items SET templateid=NULL WHERE templateid=0;
-UPDATE items SET templateid=NULL WHERE templateid IS NOT NULL AND templateid NOT IN (SELECT itemid FROM items);
-UPDATE items SET valuemapid=NULL WHERE valuemapid=0;
-UPDATE items SET valuemapid=NULL WHERE valuemapid IS NOT NULL AND valuemapid NOT IN (SELECT valuemapid from valuemaps);
+UPDATE items
+	SET templateid=NULL
+	WHERE templateid=0
+		OR templateid NOT IN (SELECT itemid FROM items);
+UPDATE items
+	SET valuemapid=NULL
+	WHERE valuemapid=0
+		OR valuemapid NOT IN (SELECT valuemapid from valuemaps);
 UPDATE items SET units='Bps' WHERE type=9 AND units='bps';
 DELETE FROM items WHERE NOT hostid IN (SELECT hostid FROM hosts);
 ALTER TABLE items ADD CONSTRAINT c_items_1 FOREIGN KEY (hostid) REFERENCES hosts (hostid) ON DELETE CASCADE;
@@ -212,8 +215,17 @@ ALTER TABLE hosts ADD jmx_available number(10) DEFAULT '0' NOT NULL;
 ALTER TABLE hosts ADD jmx_errors_from number(10) DEFAULT '0' NOT NULL;
 ALTER TABLE hosts ADD jmx_error nvarchar2(128) DEFAULT '';
 ALTER TABLE hosts ADD name nvarchar2(64) DEFAULT '';
-UPDATE hosts SET proxy_hostid=NULL WHERE proxy_hostid=0;
-UPDATE hosts SET maintenanceid=NULL WHERE maintenanceid=0;
+UPDATE hosts
+	SET proxy_hostid=NULL
+	WHERE proxy_hostid=0
+		OR NOT EXISTS (SELECT 1 FROM hosts h WHERE h.hostid=hosts.proxy_hostid);
+UPDATE hosts
+	SET maintenanceid=NULL,
+		maintenance_status=0,
+		maintenance_type=0,
+		maintenance_from=0
+	WHERE maintenanceid=0
+		OR NOT EXISTS (SELECT 1 FROM maintenances m WHERE m.maintenanceid=hosts.maintenanceid);
 UPDATE hosts SET name=host WHERE status in (0,1,3)	-- MONITORED, NOT_MONITORED, TEMPLATE
 /
 CREATE INDEX hosts_4 on hosts (name);
