@@ -12,6 +12,7 @@ A......... [ZBX-4563] changed the hostmacro related UserMacro method interfaces 
 ..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)
 
 Bug fixes:
+....I..... [ZBX-4693] fixed hosts table foreign key constraint error during database upgrade (dimir, Sasha)
 A.F....... [ZBX-4563] fixed host macro IDs being regenerated when updating macros (pavels)
 A.F....... [ZBX-4563] fixed several macro validation issues (pavels)
 ..F....... [ZBX-4563] fixed macro sorting (pavels)
